<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="#aabbcc"
           android:gravity="center_horizontal">


    <EditText
        android:background="@drawable/border"
        android:layout_margin="15dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/zero"
        android:textColor="#770000ff"
        android:gravity="right"/>
    <TableRow
        android:gravity="center_horizontal">

        <Button
            style="@style/btnstyle"
            android:text="@string/mc"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/mr"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/ms"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/mplus"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/mminus"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal">
        <Button
            style="@style/btnstyle"
            android:text="@string/arrow"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/ce"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/c"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/plus_minus"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/correct"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal">
        <Button
            style="@style/btnstyle"
            android:text="@string/seven"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/eight"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/nine"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/divide"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/mode"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal">
        <Button
            style="@style/btnstyle"
            android:text="@string/four"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/five"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/six"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/mul"/>
        <Button
            style="@style/btnstyle"
            android:text="@string/daoshu"/>
    </TableRow>

    <RelativeLayout
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/one"
            style="@style/btnstyle"
            android:text="@string/one"/>
        <Button
            android:id="@+id/two"
            style="@style/btnstyle"
            android:text="@string/two"
            android:layout_toRightOf="@id/one"
            android:layout_alignTop="@id/one"/>
        <Button
            android:id="@+id/three"
            style="@style/btnstyle"
            android:text="@string/three"
            android:layout_toRightOf="@id/two"
            android:layout_alignTop="@id/two"/>
        <Button
            android:id="@+id/minus"
            style="@style/btnstyle"
            android:text="@string/minus"
            android:layout_toRightOf="@id/three"
            android:layout_alignTop="@id/three"/>
        <Button
            android:id="@+id/equal"
            style="@style/btnstyle"
            android:text="@string/equal"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/minus"
            android:layout_alignTop="@id/minus"/>

        <Button
            android:id="@+id/plus"
            style="@style/btnstyle"
            android:text="@string/plus"
            android:layout_toLeftOf="@id/equal"
            android:layout_alignBottom="@id/equal"/>
        <Button
            android:id="@+id/dot"
            style="@style/btnstyle"
            android:text="@string/dot"
            android:layout_toLeftOf="@id/plus"
            android:layout_alignBottom="@id/plus"/>

        <Button

            style="@style/btnstyle"
            android:text="@string/zero"
            android:layout_width="120dp"
            android:layout_toLeftOf="@id/dot"
            android:layout_alignBottom="@id/dot"/>
    </RelativeLayout>

</TableLayout>
